Fix memory usage information on FreeBSD 5.x+.

Patch by Bruce Cran from the FreeBSD team.

BUG: 195507

svn path=/trunk/KDE/kdebase/apps/; revision=1087863